--- a/src/pages/quickstarts/expo.mdx
+++ b/src/pages/quickstarts/expo.mdx
@@ -476,18 +476,18 @@ import * as SecureStore from "expo-secure-store";
 const CLERK_PUBLISHABLE_KEY = "pk_test_••••••••••••••••••••••••••••••••••";
 
 const tokenCache = {
-  getToken(key: string) {
+  async getToken(key: string) {
     try {
       return SecureStore.getItemAsync(key);
     } catch (err) {
       return null;
     }
   },
-  saveToken(key: string, value: string) {
+  async saveToken(key: string, value: string) {
     try {
       return SecureStore.setItemAsync(key, value);
     } catch (err) {
-      return null;
+      return;
     }
   },
 };
