--- a/src/pages/advance/clerk-idp.mdx
+++ b/src/pages/advance/clerk-idp.mdx
@@ -51,8 +51,8 @@ Clerk creates an OAuth application and returns it's configurations back to you.
 }
 ```
 
-<Callout type="warning" emoji="ℹ️">
-  The client secret will only be displayed once in plaintext, please make sure to copy it otherwise you will have to generate a new one.
+<Callout type="warning" emoji="⚠️">
+  For security reasons, we don’t store your Client Secret and cannot show it to you again, so we recommend you download the secret and store it someplace secure.
 </Callout>
 
 
