updated code type

--- a/src/pages/advance/clerk-idp.mdx
+++ b/src/pages/advance/clerk-idp.mdx
@@ -22,8 +22,8 @@ From your SSO provider, retrieve the **Callback URL**. This is where your users 
 
 Next, you need to create an OAuth Application in Clerk via the [Backend API](https://clerk.com/docs/reference/backend-api/tag/OAuth-Applications).
 
-```jsx copy filename="POST /v1/oauth_applications"
-$ curl 
+```sh copy filename="POST /v1/oauth_applications"
+curl 
  -X POST https://api.clerk.com/v1/oauth_applications \
  -H "Authorization: Bearer <CLERK_SECRET_KEY>"  \
  -H "Content-Type: application/json" \
