--- a/src/pages/advance/clerk-idp.mdx
+++ b/src/pages/advance/clerk-idp.mdx
@@ -1,7 +1,7 @@
 import { Callout } from "nextra-theme-docs";
 import { Images } from "@/components/Images";
 
-# Use Clerk as an SSO Identity Provider 
+# Use Clerk as an OAuth 2.0 Identity Provider 
 
 Learn how to use Clerk as an Identity provider to facilitate Single Sign-On (SSO) with other applications that support the OAuth2 protocol. 
 
