Updated SSO Provider to Client, fixed up feedback

--- a/src/pages/advance/clerk-idp.mdx
+++ b/src/pages/advance/clerk-idp.mdx
@@ -3,24 +3,24 @@ import { Images } from "@/components/Images";
 
 # Use Clerk as an OAuth 2.0 Identity Provider 
 
-Learn how to use Clerk as an Identity provider to facilitate Single Sign-On (SSO) with other applications that support the OAuth2 protocol. 
+Learn how to use Clerk to facilitate Single Sign-On (SSO) with other clients that support the OAuth 2.0 protocol. 
 
 <Images
   width={496}
   height={564}
   src="/images/advance/clerk-idp-flow.svg"
-  alt="Clerk SSO IDP Flow"
+  alt="Clerk IDP Flow"
 />
 
 
-## Step 1: Retrieve SSO Provider Callback URL
+## Step 1: Retrieve Callback URL from Client
 
-From your SSO provider, retrieve the **Callback URL**. This is where your users will be redirected to after a successful authentication and is required to successfully create your OAuth application in the next step.
+From the client that you want to configure, retrieve the **Callback URL**. This is where your users will be redirected to after a successful authentication and is required to successfully create your OAuth application in the next step.
 
 
-## Step 2: Create an OAuth Application
+## Step 2: Create an OAuth Application in Clerk
 
-Next, you need to create an OAuth Application in Clerk via the [Backend API](https://clerk.com/docs/reference/backend-api/tag/OAuth-Applications).
+Next, you need to create an OAuth Application in Clerk via the [Backend API](https://clerk.com/docs/reference/backend-api/tag/OAuth-Applications) by providing the Callback URL and a Name. Note that in this context the name is used as an identifier for the application and is not displayed anywhere publicly.
 
 ```sh copy filename="POST /v1/oauth_applications"
 curl 
@@ -56,14 +56,14 @@ Clerk creates an OAuth application and returns it's configurations back to you.
 </Callout>
 
 
-## Step 3: Configure your SSO Provider
+## Step 3: Configure OAuth Application in client
 
-Now that you have setup an OAuth application in Clerk, you will need to configure these settings in your SSO provider.
+Now that you have setup an OAuth application in Clerk, you will need to configure these settings in your Client.
 
-* **Client ID**: Public identifier of your application
+* **Client ID**: Public identifier of your OAuth application
 * **Client Secret**: Confidential secret used to authenticate your OAuth application
-* **Authorization URL**: Used by the SSO provider to authorization your OAuth application
-* **Token URL**: Used by the SSO provider to retrieve access tokens
-* **Scopes**: OAuth scopes used to grant access to the SSO. Clerk only supports `profile` and `email` at this point.
-* **User Info URL**: Used by the SSO provider to retrieve the email address associated to your user 
+* **Authorization URL**: Used by the Client to request authorization from your user
+* **Token URL**: Used by the Client to retrieve access tokens
+* **Scopes**: OAuth scopes used to grant access to the SSO. Clerk only supports `profile` and `email` at this point
+* **User Info URL**: Used by the Client to retrieve the email address and profile (username, first and last name) associated to your user 
 
