--- a/src/pages/advance/clerk-idp.mdx
+++ b/src/pages/advance/clerk-idp.mdx
@@ -1,7 +1,7 @@
 import { Callout } from "nextra-theme-docs";
 import { Images } from "@/components/Images";
 
-# Use Clerk as an OAuth 2.0 Identity Provider 
+# Use Clerk as an Identity Provider 
 
 Learn how to use Clerk to facilitate Single Sign-On (SSO) with other clients that support the OAuth 2.0 protocol. 
 
