--- a/src/pages/advance/clerk-idp.mdx
+++ b/src/pages/advance/clerk-idp.mdx
@@ -5,10 +5,13 @@ import { Images } from "@/components/Images";
 
 Learn how to use Clerk to facilitate Single Sign-On (SSO) with other clients that support the OAuth 2.0 protocol. 
 
+&nbsp;  
+
+
 <Images
-  width={496}
-  height={564}
-  src="/images/advance/clerk-idp-flow.svg"
+  width={2279}
+  height={1135}
+  src="/images/advance/clerk-idp-flow-2.svg"
   alt="Clerk IDP Flow"
 />
 
