--- a/src/pages/advance/clerk-idp.mdx
+++ b/src/pages/advance/clerk-idp.mdx
@@ -67,6 +67,6 @@ Now that you have setup an OAuth application in Clerk, you will need to configur
 * **Client Secret**: Confidential secret used to authenticate your OAuth application
 * **Authorization URL**: Used by the Client to request authorization from your user
 * **Token URL**: Used by the Client to retrieve access tokens
-* **Scopes**: OAuth scopes used to grant access to the SSO. Clerk only supports `profile` and `email` at this point
+* **Scopes**: OAuth scopes used to grant access to the Client. Clerk only supports `profile` and `email` at this point
 * **User Info URL**: Used by the Client to retrieve the email address and profile (username, first and last name) associated to your user 
 
