--- a/src/pages/advance/clerk-idp.mdx
+++ b/src/pages/advance/clerk-idp.mdx
@@ -18,7 +18,7 @@ Learn how to use Clerk to facilitate Single Sign-On (SSO) with other clients tha
 
 ## Step 1: Retrieve Callback URL from the client application
 
-From the client that you want to configure, retrieve the **Callback URL**. This is where your users will be redirected to after a successful authentication and is required to successfully create your OAuth application in the next step.
+Retrieve the **Callback URL** for the client application you want to configure. This is where your users will be redirected to after a successful authentication and is required to successfully create your OAuth application in the next step.
 
 
 ## Step 2: Create an OAuth Application in Clerk
