Resolved PR Comments

--- a/src/pages/advance/clerk-idp.mdx
+++ b/src/pages/advance/clerk-idp.mdx
@@ -1,7 +1,7 @@
 import { Callout } from "nextra-theme-docs";
 import { Images } from "@/components/Images";
 
-# Use Clerk as an Identity Provider 
+# Use Clerk as an OAuth 2 Provider 
 
 Learn how to use Clerk to facilitate Single Sign-On (SSO) with other clients that support the OAuth 2.0 protocol. 
 
@@ -23,7 +23,7 @@ Retrieve the **Callback URL** for the client application you want to configure. 
 
 ## Step 2: Create an OAuth Application in Clerk
 
-Next, you need to create an OAuth Application in Clerk via the [Backend API](https://clerk.com/docs/reference/backend-api/tag/OAuth-Applications) by providing the Callback URL and a Name. Note that in this context the name is used as an identifier for the application and is not displayed anywhere publicly.
+Next, you need to create an OAuth Application in Clerk via the [Backend API](https://clerk.com/docs/reference/backend-api/tag/OAuth-Applications) by providing the Callback URL and a Name. Note that in this context the name is used to help you identify your application and is not displayed anywhere publicly.
 
 ```sh copy filename="POST /v1/oauth_applications"
 curl 
