Add useUser example for updates

--- a/src/pages/hooks/user-management/use-user.mdx
+++ b/src/pages/hooks/user-management/use-user.mdx
@@ -8,6 +8,8 @@ The `useUser` hook is used to get the current user object and to update the user
 
 ## Usage
 
+### Retrieve the current user data
+
 <Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
 <Tab>
 ```tsx copy filename="pages/index.tsx"
@@ -51,6 +53,56 @@ return <div>Not signed in</div>;
 </Tab>
 </Tabs>
 
+### Update the current user data
+
+<Tabs items={['Next.js', 'React', 'Remix', 'Gatsby']}>
+<Tab>
+```tsx copy filename="home.tsx"
+import { useUser } from "@clerk/clerk-react";
+
+export default function Home() {
+  const { user } = useUser();
+  if (!user) return null;
+  const updateUser = async () => {
+    await user.update({
+      firstName: "John",
+      lastName: "Doe",
+    });
+  };
+  return (
+    <>
+      <button onClick={updateUser}>Click me to update your name</button>
+      <p>user.firstName: {user?.firstName}</p>
+      <p>user.lastName: {user?.lastName}</p>
+    </>
+  );
+}
+```
+</Tab>
+<Tab>
+```tsx copy filename="home.tsx"
+import { useUser } from "@clerk/clerk-react";
+
+export default function Home() {
+  const { user } = useUser();
+  if (!user) return null;
+  const updateUser = async () => {
+    await user.update({
+      firstName: "John",
+      lastName: "Doe",
+    });
+  };
+  return (
+    <>
+      <button onClick={updateUser}>Click me to update your name</button>
+      <p>user.firstName: {user?.firstName}</p>
+      <p>user.lastName: {user?.lastName}</p>
+    </>
+  );
+}
+```
+</Tab>
+</Tabs>
 
 
 <Tables headings={["Variables", "Description"]} rows={[
@@ -64,4 +116,3 @@ return <div>Not signed in</div>;
       cells: ["user", "An object containing the user's data. If the user is not signed in, user will be null."]
     },
   ]} />
-
