fix: missing setActive, heading typo

--- a/src/pages/hooks/authentication/use-sign-up.mdx
+++ b/src/pages/hooks/authentication/use-sign-up.mdx
@@ -37,7 +37,7 @@ export default function SignUp() {
   const [emailAddress, setEmailAddress] = useState("");
   const [password, setPassword] = useState("");
 
-  const { isLoaded, signUp } = useSignUp();
+  const { isLoaded, signUp, setActive } = useSignUp();
 
   if (!isLoaded) {
     // handle loading state
@@ -109,7 +109,7 @@ export default function SignUpStep() {
 }
 ```
 
-#### Sign in a user with a custom flow
+#### Sign up a user with a custom flow
 
 ```tsx copy filename="signup.tsx"
 import { useSignUp } from "@clerk/clerk-react";
@@ -119,7 +119,7 @@ export default function SignUp() {
   const [emailAddress, setEmailAddress] = useState("");
   const [password, setPassword] = useState("");
 
-  const { isLoaded, signUp } = useSignUp();
+  const { isLoaded, signUp, setActive } = useSignUp();
 
   if (!isLoaded) {
     // handle loading state
