Fix typo in next app-router page

--- a/src/pages/quickstarts/nextjs/app-router.mdx
+++ b/src/pages/quickstarts/nextjs/app-router.mdx
@@ -331,7 +331,7 @@ Since request data like `headers()` and `cookies()` is now available in the glob
 import { auth } from '@clerk/nextjs/app-beta';
 
 export default function Page() {
-  const { userId: string | null } = auth();
+  const { userId } : { userId: string | null } = auth();
   // ...
 }
 ```
