Add Welcome to Clerk page

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,11 +1,7 @@
-import { Cards } from "@/components/Cards";
+import {Hero} from "@/components/Hero";
+import {Cards} from "@/components/Cards";
 
-# Getting Started
-
-The Clerk beta docs are a work in progress, you may find some rough edges or missing content. If you have any questions, please reach out to us on [Discord](https://discord.com/invite/b5rXHjAg7A).
-
-## Quickstart Guides
-
+<Hero/>
 <div className="container mx-auto my-4">
   <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
     <Cards
@@ -117,7 +113,3 @@ The Clerk beta docs are a work in progress, you may find some rough edges or mis
     />
   </div>
 </div>
-
-## How to help?
-
-We are always looking for help with the docs. If you see something that needs to be fixed or added, please open an issue or submit a PR.
