Fix links and home page

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -7,37 +7,37 @@ import {Cards} from "@/components/Cards";
     <Cards
       title="Next.js Stable"
       description="Learn how to use Clerk to quickly and easily add secure authentication and user management to your Next.js application."
-      link="/quickstarts/nextjs/stable"
+      link="/nextjs/stable"
       cta="Get Started"
     />
     <Cards
       title="Next.js App Router"
       description="Learn how to use Clerk to quickly and easily add secure authentication and user management to your Next.js using RSC."
-      link="/quickstarts/nextjs/app-router"
+      link="/nextjs/app-router"
       cta="Get Started"
     />
     <Cards
       title="React"
       description="Learn how to use Clerk to quickly and easily add secure authentication and user management to your React application."
-      link="/quickstarts/react"
+      link="/react"
       cta="Get Started"
     />
     <Cards
       title="Remix"
       description="Learn how to use Clerk to quickly and easily add secure authentication and user management to your Remix application."
-      link="/quickstarts/remix"
+      link="/remix"
       cta="Get Started"
     />
     <Cards
       title="Expo"
       description="Learn how to use Clerk to add secure authentication and user management to your Expo application using custom flows."
-      link="/quickstarts/expo"
+      link="/expo"
       cta="Get Started"
     />
     <Cards
       title="RedwoodJS"
       description="Learn how to use Clerk to add secure authentication and user management to your RedwoodJS application"
-      link="/quickstarts/redwood"
+      link="/redwood"
       cta="Get Started"
     />
   </div>
@@ -50,25 +50,25 @@ import {Cards} from "@/components/Cards";
     <Cards
       title="Authentication"
       description="Learn about the authentication components that Clerk provides and how to use them."
-      link="/components/authentication/sign-in"
+      link="/authentication-components/sign-in"
       cta="Learn More"
     />
     <Cards
       title="User Management"
       description="Learn about the user management components that Clerk provides and how to use them."
-      link="/components/user-management/signed-in"
+      link="/user-management-components/signed-in"
       cta="Learn More"
     />
     <Cards
       title="Organization Management"
       description="Learn about the organization management components that Clerk provides and how to use them."
-      link="/components/organization-management/create-organization"
+      link="/organization-management-components/create-organization"
       cta="Learn More"
     />
     <Cards
       title="Customization & Localization"
       description="Learn how to customize and localize the Clerk components."
-      link="/components/customization/appearance"
+      link="/customization/appearance"
       cta="Learn More"
     />
   </div>
@@ -81,14 +81,14 @@ import {Cards} from "@/components/Cards";
     <Cards
       title="User Management"
       description="Learn about the user management hooks that Clerk provides and how to use them."
-      link="/hooks/user-management/use-user"
+      link="/user-management-hooks/use-user"
       cta="Learn More"
     />
 
     <Cards
       title="Authentication"
       description="Learn about the authentication hooks that Clerk provides and how to use them"
-      link="/hooks/authentication/use-sign-in"
+      link="/authentication-hooks/use-sign-in"
       cta="Learn More"
     />
     </div>
@@ -102,13 +102,13 @@ import {Cards} from "@/components/Cards";
     <Cards
       title="Next.js"
       description="Learn about the Next.js SDK that Clerk provides and it's unique features."
-      link="/sdk/next/get-auth"
+      link="/next-sdk/get-auth"
       cta="Learn More"
     />
     <Cards
       title="Shared"
       description="Learn about Clerk SDK methods that are shared across each framework."
-      link="/sdk/shared/use-auth"
+      link="/shared-sdk/use-auth"
       cta="Learn More"
     />
   </div>
