chore: add alt text, fix grammar

--- a/src/pages/get-started/setup-clerk.mdx
+++ b/src/pages/get-started/setup-clerk.mdx
@@ -3,7 +3,7 @@ import { Steps } from 'nextra-theme-docs'
 
 # Setup Clerk
 
-Let's set up a fresh Clerk account and start integrating it into a new application.
+Let's set up a new Clerk account and integrate it into a new application.
 
 <details>
 <summary>Migrating from another platform?</summary>
@@ -22,7 +22,7 @@ Creating a Clerk account and using it in your apps is a simple three-step proces
 
     <br/>
     {/* Don't move ![] to a new line, otherwise MDX adds a <p> tag and it breaks A11Y */}
-    <div style={{filter: "drop-shadow(rgba(0, 0, 0, 0.16) 0px 12px 24px)", maxWidth: "400px"}}>![](./create-clerk-account.png)</div>
+    <div style={{filter: "drop-shadow(rgba(0, 0, 0, 0.16) 0px 12px 24px)", maxWidth: "400px"}}>![An interactive "Create your account" card which provides sign-up options for a GitHub or Google account as well as email and password.](./create-clerk-account.png)</div>
     <br/>
 
     ### Step 2: Create a Clerk application
@@ -33,15 +33,15 @@ Creating a Clerk account and using it in your apps is a simple three-step proces
 
     <br/>
     {/* Don't move ![] to a new line, otherwise MDX adds a <p> tag and it breaks A11Y */}
-    <div style={{filter: "drop-shadow(rgba(0, 0, 0, 0.16) 0px 12px 24px)", maxWidth: "400px"}}>![](./add-application.png)</div>
+    <div style={{filter: "drop-shadow(rgba(0, 0, 0, 0.16) 0px 12px 24px)", maxWidth: "400px"}}>![An "Add application" card on your dashboard](./add-application.png)</div>
     <br/>
 
-    When the "Add application" card is pressed, you'll be directed to create your `<SignIn>` component, and select your preferred
+    When the "Add application" card is pressed, you'll be directed to create your `<SignIn>` component and select your preferred
     auth providers.
 
     <br/>
     {/* Don't move ![] to a new line, otherwise MDX adds a <p> tag and it breaks A11Y */}
-    <div style={{filter: "drop-shadow(rgba(0, 0, 0, 0.16) 0px 12px 24px)"}}>![](./create-sign-in-comp.png)</div>
+    <div style={{filter: "drop-shadow(rgba(0, 0, 0, 0.16) 0px 12px 24px)"}}>![An interactive builder to make your "SignIn" component truly yours, which lets you select your auth providers.](./create-sign-in-comp.png)</div>
     <br/>
 
     > [We provide over 20 authentication providers that you can utilize in your Clerk apps.](/users/authentication-providers/overview)
@@ -50,7 +50,7 @@ Creating a Clerk account and using it in your apps is a simple three-step proces
 
     <br/>
     {/* Don't move ![] to a new line, otherwise MDX adds a <p> tag and it breaks A11Y */}
-    <div style={{filter: "drop-shadow(rgba(0, 0, 0, 0.16) 0px 12px 24px)"}}>![](./env-keys.png)</div>
+    <div style={{filter: "drop-shadow(rgba(0, 0, 0, 0.16) 0px 12px 24px)"}}>![A list of supported frameworks with instructions on how to add API keys underneath.](./env-keys.png)</div>
     <br/>
 
     ### Step 3: Spin up a new codebase
