chore: format with prettier

--- a/src/pages/quickstarts/full-stack/app-router.mdx
+++ b/src/pages/quickstarts/full-stack/app-router.mdx
@@ -1,7 +1,7 @@
 import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
 import { YouTube } from "@/components/Youtube";
-import {Cards} from "@/components/Cards";
+import { Cards } from "@/components/Cards";
 import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # Use Clerk with Next.js
@@ -12,16 +12,10 @@ Learn how to use Clerk to quickly and easily add secure authentication and user 
 
 Once you have a Next.js application ready, you need to install Clerk's Next.js SDK. This gives you access to prebuilt components and hooks, as well as our helpers for Next.js API routes, server-side rendering, and middleware.
 
-<CodeBlockTabs options={['npm', 'yarn', 'pnpm']}>
-  ``` bash filename="your-project" copy
-  npm install @clerk/nextjs
-  ```
-  ``` bash filename="your-project" copy
-   yarn add @clerk/nextjs
-   ```
-   ``` bash filename="your-project" copy
-   pnpm i @clerk/nextjs
-   ```
+<CodeBlockTabs options={["npm", "yarn", "pnpm"]}>
+  ``` bash filename="your-project" copy npm install @clerk/nextjs ``` ``` bash
+  filename="your-project" copy yarn add @clerk/nextjs ``` ``` bash
+  filename="your-project" copy pnpm i @clerk/nextjs ```
 </CodeBlockTabs>
 
 ## Set Environment Keys
@@ -88,7 +82,9 @@ export default function Page() {
 ```
 
 <Callout type="info" emoji="ℹ️">
-  By default, the Clerk components inherit the font family. With create-next-app they don't apply a global font family. When you launch your application you may notice that the font family is different.
+  By default, the Clerk components inherit the font family. With create-next-app
+  they don't apply a global font family. When you launch your application you
+  may notice that the font family is different.
 </Callout>
 
 ## Add Middleware
@@ -96,7 +92,8 @@ export default function Page() {
 To use server side functionality, you need to add the Clerk middleware to your Next.js application. This allows you to access the session in your Next.js API routes and server-side rendered pages. Middleware should be placed at the root of your project.
 
 <Callout type="info" emoji="ℹ️">
-If you select `src/` as part of the create-next-app CLI you will need to place the middleware file inside of that directory.
+  If you select `src/` as part of the create-next-app CLI you will need to place
+  the middleware file inside of that directory.
 </Callout>
 
 ```tsx copy filename="middleware.ts"
@@ -122,7 +119,7 @@ export const config = {
     "/((?!static|.*\\..*|_next|favicon.ico).*)",
     "/",
   ],
-}
+};
 ```
 
 ## Protecting Your Pages
@@ -179,7 +176,7 @@ export const config = {
     "/((?!static|.*\\..*|_next|favicon.ico).*)",
     "/",
   ],
-}
+};
 ```
 
 </Tab>
@@ -328,10 +325,10 @@ We have introduced a new `auth()` helper that returns the same Authentication Ob
 Since request data like `headers()` and `cookies()` is now available in the global scope for Next.js, you no longer need to explicitly pass a Request object to Clerk
 
 ```tsx copy filename="app/page.tsx"
-import { auth } from '@clerk/nextjs/app-beta';
+import { auth } from "@clerk/nextjs/app-beta";
 
 export default function Page() {
-  const { userId } : { userId: string | null } = auth();
+  const { userId }: { userId: string | null } = auth();
   // ...
 }
 ```
@@ -360,5 +357,5 @@ Now you have an application integrated with Clerk you will want to read the foll
       link="/sdk/shared/use-auth"
       cta="Learn More"
     />
-   </div>
+  </div>
 </div>
