--- a/src/pages/reference-react/user-management/use-user.mdx
+++ b/src/pages/reference-react/user-management/use-user.mdx
@@ -29,7 +29,7 @@ return <div>Hello {user.fullName}!</div>;
 return <div>Not signed in</div>;
 }
 
-```
+````
 </Tab>
 <Tab>
 ```tsx copy filename="home.tsx"
@@ -49,7 +49,8 @@ return <div>Hello {user.fullName}!</div>;
 return <div>Not signed in</div>;
 }
 
-```
+````
+
 </Tab>
 </Tabs>
 
@@ -104,15 +105,26 @@ export default function Home() {
 </Tab>
 </Tabs>
 
-
-<Tables headings={["Variables", "Description"]} rows={[
+<Tables
+  headings={["Variables", "Description"]}
+  rows={[
     {
-      cells: ["isSignedIn", "A boolean that returns true if the user is signed in."]
+      cells: [
+        "isSignedIn",
+        "A boolean that returns true if the user is signed in.",
+      ],
     },
     {
-      cells: ["isLoaded", "A boolean that until Clerk loads and initializes, will be set to false. Once Clerk loads, isLoaded will be set to true"]
+      cells: [
+        "isLoaded",
+        "A boolean that until Clerk loads and initializes, will be set to false. Once Clerk loads, isLoaded will be set to true",
+      ],
     },
     {
-      cells: ["user", "An object containing the user's data. If the user is not signed in, user will be null."]
+      cells: [
+        "user",
+        "An object containing the user's data. If the user is not signed in, user will be null.",
+      ],
     },
-  ]} />
+  ]}
+/>
