--- a/src/pages/migrations-deployments/production.mdx
+++ b/src/pages/migrations-deployments/production.mdx
@@ -1,12 +1,14 @@
 import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
-import { Tables } from '@/components/Table'
-import {Images} from '@/components/Images'
+import { Tables } from "@/components/Table";
+import { Images } from "@/components/Images";
 
 # Deploying to Production
+
 Learn how to deploy your app to production.
 
 ## Before you begin
+
 1. You will need to have a domain you own.
 2. You will need to be able to add DNS records on your domain.
 3. You will need Social Login (OAuth) credentials for any providers that you would like to use in production.
@@ -16,17 +18,21 @@ Learn how to deploy your app to production.
 From your application dashboard, select the instance dropdown and click "Production". Once you select "Production", you will be prompted with a modal to either clone your development instance or create a new production instance.
 
 <Images
-width={1200}
-height={675}
+  width={1200}
+  height={675}
   src="/images/production/production-modal.png"
   alt="Production Modal"
 />
 
 In most cases you will want to clone your development instance. This will copy most of your settings from your development instance to your production instance.
 
-<Callout type="warning">For security reasons, Social Login, Integrations and Paths settings do not copy over, you will need to set these values again.</Callout>
+<Callout type="warning">
+  For security reasons, Social Login, Integrations and Paths settings do not
+  copy over, you will need to set these values again.
+</Callout>
 
 ## API Keys and Environment variables
+
 A common mistake when deploying to production is forgetting to change your API keys to your production instances keys. The best way to set this up, is to make use of Environment variables. All modern hosting providers, such as AWS, GCP, Vercel, Heroku, Render, etc.. make it easy to add these values. Locally, you should use an env file, this way these values are being set dynamically depending on your environment. Here's a list of Clerk variables you'll need to change:
 
 1. **Publishable Key:** Formatted as `pk_test_` in development and `pk_live_` in production. This is passed to the `<ClerkProvider />` during initialization.
@@ -39,7 +45,9 @@ A common mistake when deploying to production is forgetting to change your API k
 
 Clerk uses DNS records to provide session management, and emails verified from your domain. You will need to go to DNS section to see the records that you need to set.
 
-<Callout type="info">It can take up to 24hrs for DNS Records to fully propagate, so be patient.</Callout>
+<Callout type="info">
+  It can take up to 24hrs for DNS Records to fully propagate, so be patient.
+</Callout>
 
 <Images
   width={1200}
@@ -49,6 +57,7 @@ Clerk uses DNS records to provide session management, and emails verified from y
 />
 
 ## Deploy Certificates
+
 Once you've completed all the above steps, you're ready to go to the home page, and press Deploy to set SSL certificates and finalize the instance deployment.
 
 <Images
@@ -57,7 +66,6 @@ Once you've completed all the above steps, you're ready to go to the home page, 
   src="/images/production/production-certificate.png"
   alt="Production Certificate Records"
 />
-
 
 ## Troubleshooting
 
