--- a/src/pages/reference-react/authentication/sign-up.mdx
+++ b/src/pages/reference-react/authentication/sign-up.mdx
@@ -4,7 +4,6 @@ import { Tables } from "@/components/Table";
 import { Images } from "@/components/Images";
 import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
-
 # `<SignUp />`
 
 ---
@@ -28,8 +27,7 @@ Below is basic implementation of the `<SignUp/>` component. You can use this as 
 import { SignUp } from "@clerk/nextjs";
 
 const SignUpPage = () => (
-
-<SignUp path="/sign-up" routing="path" signInUrl="/sign-in" />
+  <SignUp path="/sign-up" routing="path" signInUrl="/sign-in" />
 );
 export default SignUpPage;
 ```
@@ -69,11 +67,10 @@ export default function SignUpPage() {
 ```
 
 ```js copy filename="sign-up.js"
-window.Clerk.mountSignUp(
-  document.getElementById("sign-up")
-);
+window.Clerk.mountSignUp(document.getElementById("sign-up"));
 window.Clerk.openSignUp();
 ```
+
 </CodeBlockTabs>
 
 ## Props
