--- a/src/pages/reference-react/user-management/redirect-to-userprofile.mdx
+++ b/src/pages/reference-react/user-management/redirect-to-userprofile.mdx
@@ -2,9 +2,7 @@ import { Tab, Tabs } from "nextra-theme-docs";
 
 # `<RedirectToUserProfile />`
 
-
 The `<RedirectToUserProfile/>` component will navigate to the user profile URL which has been configured in your application instance. The behavior will be just like a server-side (3xx) redirect, and will override the current location in the history stack.
-
 
 ## Usage
 
@@ -19,19 +17,16 @@ import {
 } from "@clerk/nextjs";
 import { AppProps } from "next/app";
 
-
 function MyApp({ Component, pageProps } : AppProps) {
-  return (
-    <ClerkProvider {...pageProps}>
-          <SignedIn>
-            <RedirectToUserProfile/>
-          </SignedIn>
-          <SignedOut>
-            Please Sign In
-          </SignedOut>
-    </ClerkProvider>
-  );
-}
+return (
+
+<ClerkProvider {...pageProps}>
+  <SignedIn>
+    <RedirectToUserProfile />
+  </SignedIn>
+  <SignedOut>Please Sign In</SignedOut>
+</ClerkProvider>
+); }
 
 export default MyApp;
 ```
@@ -46,18 +41,20 @@ import {
 } from "@clerk/clerk-react";
 
 function PrivatePage() {
-  return (
-    <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
-      <SignedIn>
-        <RedirectToUserProfile/>
-      </SignedIn>
-      <SignedOut>
-        Please Sign In
-      </SignedOut>
-    </div>
-  );
+return (
+
+<ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
+<SignedIn>
+<RedirectToUserProfile/>
+</SignedIn>
+<SignedOut>
+Please Sign In
+</SignedOut>
+</div>
+);
 }
-```
+
+````
 </Tab>
 <Tab>
 ```tsx filename="routes/index.tsx" copy
@@ -79,6 +76,7 @@ export default function Index() {
     </div>
   );
 }
-```
+````
+
 </Tab>
 </Tabs>
